<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_movie_details_screen"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_original_title_header"
            tools:text="@string/header_original_title"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:paddingTop="32dp"
            android:paddingBottom="32dp"
            android:paddingLeft="16dp"
            android:background="#00BFA5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_original_title_header"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tv_release_date_label"
            android:text="@string/header_release_date"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/iv_movie_poster"
            android:layout_marginLeft="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_original_title_header"
            android:layout_marginTop="8dp" />

        <TextView
            tools:text="@string/date_format_example"
            android:id="@+id/tv_movie_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/tv_release_date_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date_label"
            android:layout_marginTop="0dp" />

        <TextView
            android:id="@+id/tv_vote_average_label"
            android:text="@string/header_vote_average"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/tv_release_date_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_release_date"
            android:layout_marginTop="16dp" />

        <TextView
            tools:text="@string/vote_average_example"
            android:id="@+id/tv_movie_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/tv_release_date_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_vote_average_label"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="0dp" />
        
        <ImageButton
            android:id="@+id/ib_favorite_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/btn_star_big_off"
            android:background="@null"
            android:onClick="markAsFavorite"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_vote_average"
            app:layout_constraintLeft_toRightOf="@+id/tv_vote_average_label"
            app:layout_constraintRight_toLeftOf="@+id/tv_vote_average_label" />

        <TextView
            tools:text="@string/long_text_example"
            android:id="@+id/tv_movie_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp" />

        <ImageView
            android:id="@+id/divider_trailers"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#000000"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_overview"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp" />

        <ImageButton
            android:id="@+id/ib_trailer_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/arrow_down_float"
            android:tint="#000000"
            android:background="@null"
            android:onClick="showTrailerList"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/divider_trailers"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/tv_trailers_label"
            android:text="@string/trailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ib_trailer_icon"
            app:layout_constraintBottom_toTopOf="@+id/ib_trailer_icon"
            app:layout_constraintLeft_toRightOf="@+id/ib_trailer_icon"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_movie_trailer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:nestedScrollingEnabled="false"
            app:layout_constraintLeft_toLeftOf="@+id/tv_trailers_label"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_trailers_label"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />


        <ImageView
            android:id="@+id/divider_reviews"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#000000"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/rv_movie_trailer"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp" />

        <ImageButton
            android:id="@+id/ib_review_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/arrow_down_float"
            android:tint="#000000"
            android:background="@null"
            android:onClick="showMovieReviewList"
            app:layout_constraintLeft_toLeftOf="@+id/ib_trailer_icon"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/divider_reviews" />

        <TextView
            android:id="@+id/tv_reviews_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews"
            app:layout_constraintTop_toBottomOf="@+id/ib_review_icon"
            app:layout_constraintBottom_toTopOf="@+id/ib_review_icon"
            app:layout_constraintLeft_toRightOf="@+id/ib_review_icon"
            android:layout_marginLeft="8dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_movie_review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:nestedScrollingEnabled="false"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_reviews_label"
            app:layout_constraintLeft_toLeftOf="@+id/tv_reviews_label"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>